--- a/interCityRideSharingSystem-Web/package.json
+++ b/interCityRideSharingSystem-Web/package.json
@@ -1,8 +1,8 @@
 {
   "name": "intercityridesharingsystem-web",
   "version": "1.0.0",
-  "description": "A Vue.js web frontend for Intercity Ride Sharing App",
-  "author": "skrahat <asaduzzaman.rahat@mail.mcgill.ca>",
+  "description": "A Vue.js web frontend for Intercity Ride Sharing System Ap",
+  "author": "Shaodi Sun <shaodi.sun@mail.mcgill.ca>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -13,11 +13,13 @@
     "test": "npm run unit && npm run e2e"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
+    "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "save": "^2.3.2",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
